--- a/style.css
+++ b/style.css
@@ -25,8 +25,15 @@
 
 }
 
-
+.project-border {
+  border: 1px solid grey;
+}
 
 .project-img {
   background-position: center;
+}
+
+.projects-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
