finished setting up projects and navbar

--- a/style.css
+++ b/style.css
@@ -33,3 +33,11 @@
 .project-img {
   background-position: center;
 }
+
+.navbar-alignment {
+  vertical-align: bottom;
+}
+
+.nav-item {
+  font-size: 18px;
+}
