--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #hero {
-  background-image: url(headerimg.jpg);
+  background-image: url(whitFloralBackG.jpg);
   background-size: cover;
   background-position: center bottom;
   height: 100%;
